# sse

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.4.10-pre1  CMakeLists.txt.user.4.9-pre1  CMakeLists.txt.user.f1657e1  README.md  TODO.md  conanfile.txt  cube.step
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  codeql-analysis.yml  codespell.yml  coverage.yml  occt_cache.yml  tmp.yml
app/: CMakeLists.txt  main.cpp
apps/: CMakeLists.txt  main.cpp
cMake/: FindOpenCASCADE.cmake
cmake/: CompilerWarnings.cmake  Doxygen.cmake  Findsse.cmake  StepSlicerEngineConfig.cmake.in  gitversion.cmake  libsseConfig.cmake.in  sseConfig.cmake.in
doc/: welcome.dox
include/: importer.h  main.h  slice.h  version.h  version.h.in
include/sse/: GCodeWriter.hpp  Importer.hpp  Object.hpp  Packer.hpp  SVGWriter.hpp  Settings.hpp  Slice.hpp  pathgenerator.hpp  slicer.hpp  version.hpp.in
libsse/: CMakeLists.txt
libsse/doc/: CMakeLists.txt  welcome.dox
libsse/include/: Packer.hpp
libsse/include/sse/: GCodeWriter.hpp  Importer.hpp  Object.hpp  Packer.hpp  Settings.hpp  Slice.hpp  slicer.hpp  version.hpp.in
libsse/src/: GCodeWriter.cpp  Importer.cpp  Object.cpp  Packer.cpp  Rearrange.cpp  Settings.cpp  Slice.cpp  slicer.cpp
resources/: arc_test.FCStd  assembly_test.step  bridge_test.step  corkscrew.step  corkscrew_tapered_1.step  corkscrew_tapered_2.step  curve_test.step  island_two_square.step  profile.toml  sphere.step  support_test.step  test_models.FCStd  text_test.step
src/: GCodeWriter.cpp  Importer.cpp  Object.cpp  Packer.cpp  SVGWriter.cpp  Settings.cpp  Slice.cpp  importer.cpp  importer.h  main.cpp  main.h  pathgenerator.cpp  pathgenerator.h  slice.cpp  slicer.cpp
tests/: CMakeLists.txt  benchmark.cpp  main.cpp  performance_test.cpp  test_binpack.cpp  test_importer.cpp  test_main.cpp  test_object.cpp  test_rearrange.cpp  test_settings.cpp  test_slice.cpp  test_slicer.cpp
tests/resources/: arc_test.step  box.brep  box.iges  box.step  box.stpZ  brick.step  bullseye.step  christmas_tree.step  christmas_tree_inverted.step  concave_test.step  cube2.step  curve_test2.step  cylinder.step  invalid_box.brep  invalid_box.iges  invalid_box.step  invalid_profile.toml  island_one_square.step  sphere.step  square_island.step  test_models.FCStd  zero_width_test.step
